fix(ai): support general chat without agent